@@ -1,5 +1,6 @@
 Changes for v0.2:
     * Ability to start applications with a low security integrity
+    * Added window tracking when user manually changes focus
 
 Changes for v0.1:
     * Window & monitor tracking
